# qompose

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  Config.h.in  LICENSE.md  README.md  clean.sh  debug.sh  dir-prepare.sh  icons.qrc  release.sh  valgrind.sh  valgrind.supp
cpp/src/core-test/: CMakeLists.txt  qompose-core-test.cpp
cpp/src/core-test/file/: InMemoryFileTest.cpp  MMIOFileTest.cpp
src/QomposeCommon/: Application.cpp  Application.h  CMakeLists.txt  Defines.h  MSVCWarnings.h  QomposeApplication.h  QomposeDefines.h  QomposeTypes.h  QomposeWindow.h  Types.cpp  Types.h  Window.cpp  Window.h  data.qrc  icons.qrc
src/QomposeCommon/compat/: Optional.h
src/QomposeCommon/dialogs/: AboutDialog.cpp  AboutDialog.h  EncodingDialog.cpp  EncodingDialog.h  FileDialog.cpp  FileDialog.h  FindDialog.cpp  FindDialog.h  GoToDialog.cpp  GoToDialog.h  QomposeAboutDialog.cpp  QomposeEncodingDialog.cpp  QomposeEncodingDialog.h  QomposeFileDialog.cpp  QomposeFileDialog.h  QomposeFindDialog.cpp  QomposeGoToDialog.cpp  QomposeReplaceDialog.cpp  ReplaceDialog.cpp  ReplaceDialog.h
src/QomposeCommon/dialogs/preferences/: PreferencesDialog.cpp  PreferencesDialog.h  PreferencesListModel.cpp  PreferencesListModel.h  PreferencesListView.cpp  PreferencesListView.h  QomposePreferencesDialog.cpp  QomposePreferencesListModel.cpp  QomposePreferencesListModel.h  QomposePreferencesListView.cpp  QomposePreferencesListView.h
src/QomposeCommon/dictionaries/: manifest.json
src/QomposeCommon/editor/: Buffer.cpp  Buffer.h  DecoratedTextEdit.cpp  DecoratedTextEdit.h  Editor.cpp  Editor.h  Gutter.cpp  Gutter.h  Pane.cpp  Pane.h  QomposeBuffer.cpp  QomposeBuffer.h  QomposeDecoratedTextEdit.cpp  QomposeDecoratedTextEdit.h  QomposeEditor.cpp  QomposeEditor.h  QomposeGutter.cpp  QomposeGutter.h
src/QomposeCommon/editor/algorithm/: General.cpp  General.h  Indentation.cpp  Indentation.h  Movement.cpp
src/QomposeCommon/editor/pane/: Pane.cpp  Pane.h  PaneModel.cpp  PaneModel.h  PaneView.cpp  PaneView.h  TabbedPaneView.cpp  TabbedPaneView.h
src/QomposeCommon/editor/search/: Find.cpp  Find.h  Query.cpp  Query.h  Replace.cpp  Replace.h
src/QomposeCommon/editor/spell/: SpellChecker.cpp  SpellChecker.h  SpellCheckerWorker.cpp  SpellCheckerWorker.h  Utils.cpp  Utils.h
src/QomposeCommon/fs/: DocumentWriter.cpp  DocumentWriter.h  MemoryMappedFile.cpp  MemoryMappedFile.h  TemporaryStorage.cpp  TemporaryStorage.h
src/QomposeCommon/git/: AbstractGitObject.h  Buffer.cpp  Buffer.h  Diff.cpp  Diff.h  DiffStats.cpp  DiffStats.h  GitAPI.cpp  GitAPI.h  Reference.cpp  Reference.h  Repository.cpp  Repository.h  RepositoryWatcher.cpp  RepositoryWatcher.h  Tree.cpp  Tree.h  Utils.cpp  Utils.h
src/QomposeCommon/gui/: BufferWidget.cpp  BufferWidget.h  ColorPickerButton.cpp  ColorPickerButton.h  EllipsizedLabel.cpp  EllipsizedLabel.h  FontPickerButton.cpp  FontPickerButton.h  GUIUtils.cpp  GUIUtils.h  NotificationLabel.cpp  NotificationLabel.h  QomposeBufferWidget.cpp  QomposeBufferWidget.h  QomposeColorPickerButton.cpp  QomposeFontPickerButton.cpp  QomposeNotificationLabel.cpp  QomposeStatusBar.cpp  QomposeStatusBar.h  StatusBar.cpp  StatusBar.h
src/QomposeCommon/gui/dock/: BrowserDockWidget.cpp  BrowserDockWidget.h  BrowserModel.cpp  BrowserModel.h  BrowserView.cpp  BrowserView.h
src/QomposeCommon/gui/menus/: EncodingMenu.cpp  EncodingMenu.h  MainMenu.cpp  MainMenu.h  MenuDescriptors.cpp  MenuDescriptors.h  QomposeMainMenu.cpp  QomposeMainMenu.h  QomposeRecentMenu.cpp  QomposeRecentMenu.h  RecentMenu.cpp  RecentMenu.h
src/QomposeCommon/hotkey/: HotkeyMap.h  HotkeyedWidget.h
src/QomposeCommon/settings/: Deserializer.cpp  Deserializer.h  RecentList.cpp  RecentList.h  Serializer.cpp  Serializer.h  Settings.cpp  Settings.h
src/QomposeCommon/syntax/: Lexer.cpp  Lexer.h  QomposeSyntaxHighlighter.cpp  QomposeSyntaxHighlighter.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/QomposeCommon/thread/: LowPriorityThread.cpp  LowPriorityThread.h  Utils.cpp  Utils.h
src/QomposeCommon/util/: ConfigurationWatcher.hpp  DocumentWriter.cpp  DocumentWriter.h  Encoding.cpp  Errno.cpp  Errno.h  FindQuery.cpp  FindQuery.h  FontMetrics.cpp  FontMetrics.h  Hotkey.cpp  Hotkey.h  HotkeyMap.cpp  HotkeyMap.h  MemoryMappedFile.cpp  Paths.cpp  Paths.h  QomposeDocumentWriter.cpp  QomposeFindQuery.cpp  QomposeFontMetrics.cpp  QomposeFontMetrics.h  QomposeHotkey.cpp  QomposeHotkeyMap.h  QomposeReplaceQuery.h  ReplaceQuery.cpp  ReplaceQuery.h  ScopeExit.cpp  ScopeExit.h  Settings.cpp  Settings.h  Strings.cpp  Strings.h  TemporaryStorage.cpp  Windows.h
src/QomposeTest/: AssertionException.cpp  AssertionException.h  CMakeLists.txt  DecoratedTextEditTest.cpp  FontMetricsTest.cpp  HotkeyMapTest.cpp  HotkeyTest.cpp  QomposeAssertionException.cpp  QomposeAssertionException.h  QomposeTest.cpp  QomposeTest.h  QomposeTestSuite.cpp  Test.cpp  Test.h
src/QomposeTest/editor/: EditorTest.cpp
src/QomposeTest/editor/algorithm/: MovementTest.cpp  (+1 more)
src/QomposeTest/fs/: MemoryMappedFileTest.cpp  TemporaryStorageTest.cpp
src/QomposeTest/hotkey/: HotkeyMapTest.cpp  HotkeyTest.cpp
src/QomposeTest/settings/: RoundTripTest.cpp  SettingsTest.cpp
src/QomposeTest/tests/: DecoratedTextEditTest.cpp  DecoratedTextEditTest.h  FontMetricsTest.cpp  FontMetricsTest.h  HotkeyMapTest.cpp  HotkeyMapTest.h  HotkeyTest.cpp  HotkeyTest.h  QomposeHotkeyMapTest.cpp  QomposeHotkeyTest.cpp  QomposeHotkeyTest.h
src/QomposeTest/util/: EncodingTest.cpp  MemoryMappedFileTest.cpp  QomposeFontMetricsTest.cpp  QomposeFontMetricsTest.h  QomposeHotkeyMapTest.cpp  QomposeHotkeyMapTest.h  QomposeHotkeyTest.cpp  QomposeHotkeyTest.h  TemporaryStorageTest.cpp
src/core/: CMakeLists.txt  Utf8Iterator.cpp  Utf8Iterator.hpp  Utf8String.cpp  Utf8String.hpp
src/core/config/: Configuration.cpp  Configuration.hpp
src/core/document/: Cursor.cpp  Cursor.hpp  Document.cpp  Document.hpp  DocumentHistory.cpp  PieceTable.cpp  PieceTable.hpp
src/core/file/: InMemoryFile.cpp  MMIOFile.cpp  MMIOFile.hpp
src/core/string/: Utf8Iterator.cpp  Utf8String.hpp  Utf8StringRef.hpp
(+265 files in other folders)
